# bootcamp-deep-learning

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
checkpoints/: history.json  luna_model_best.pt  luna_model_latest.pt
notebooks/: 01_download_luna16.ipynb  02_explore_csv_data.ipynb  03_analyze_coordinates.ipynb  03_unify_data_sources.ipynb  04_ct_scan_to_dataset.ipynb  05_model_architecture.ipynb  06_training.ipynb  07_colab_training.ipynb  08_model_evaluation.ipynb  09_gradio_deploy.ipynb  _03_analyze_coordinates_diff.ipynb
notebooks/old/: 01_download_luna16.ipynb  03_analyze_coordinates.ipynb
src/: __init__.py  inference.py  luna_data.py  training.py
tests/: test_model.py
